--- a/ramo-de-tulipanes-rosados/index.html
+++ b/ramo-de-tulipanes-rosados/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="tools/styles.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>PARA TI MI LELY</title>
     <style>
@@ -30,7 +30,7 @@
         <img src="https://i.imghippo.com/files/Gps9009XY.png" alt="Tulipanes">
     </a>
     <div class="snow" id="snow"></div>
-   <script src="script.js"></script>  
+   <script src="tools/script.js"></script>  
     
 
 </body>
