--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <!-- Proyecto 1 -->
           <!---->
           <a
-            href="proyectos/carrusel-de-imágenes/index.html"
+            href="Proyectos ♥/carrusel-de-imágenes/index.html"
             target="_blank"
             rel="noopener noreferrer"
             class="box"
@@ -62,7 +62,7 @@
           <!-- Proyecto 2 -->
           <!---->
           <a
-            href="proyectos/coleción-de-imágenes/index.html"
+            href="Proyectos ♥/coleción-de-imágenes/index.html"
             target="_blank"
             rel="noopener noreferrer"
             class="box"
@@ -88,7 +88,7 @@
           <!-- Proyecto 3 -->
           <!---->
           <a
-            href="proyectos/collage-de-imágenes/index.html"
+            href="Proyectos ♥/collage-de-imágenes/index.html"
             target="_blank"
             rel="noopener noreferrer"
             class="box"
@@ -114,7 +114,7 @@
           <!-- Proyecto 4 -->
           <!---->
           <a
-            href="proyectos/corazón-negro/index.html"
+            href="Proyectos ♥/corazón-negro/index.html"
             target="_blank"
             rel="noopener noreferrer"
             class="box"
@@ -140,7 +140,7 @@
           <!-- Proyecto 5 -->
           <!---->
           <a
-            href="proyectos/galaxy-de-fotos/index.html"
+            href="Proyectos ♥/galaxy-de-fotos/index.html"
             target="_blank"
             rel="noopener noreferrer"
             class="box"
@@ -164,7 +164,7 @@
           <!-- Proyecto 6 -->
           <!---->
           <a
-            href="proyectos/ramo-de-tulipanes-rosados/index.html"
+            href="Proyectos ♥/ramo-de-tulipanes-rosados/index.html"
             target="_blank"
             rel="noopener noreferrer"
             class="box"
