--- a/index.html
+++ b/index.html
@@ -2,195 +2,82 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Iconos -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/boxicons@2.1.2/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-
-    <!-- Estilos -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      media="screen and (max-width: 992px)"
-      href="css/mobile.css"
-    />
-
     <title>Marco-Flowod</title>
+    <link rel="stylesheet" href="tools/styles.css" />
   </head>
   <body>
-    <section id="grid">
-      <div class="container">
-        <div class="grid-wrapper">
-          <!---->
-          <!-- Proyecto 1 -->
-          <!---->
-          <a
-            href="Proyectos♥/carrusel-de-imágenes/index.html"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="box"
-          >
-            <img src="./imagenes/imagen-1.png" alt="Proyecto 1" />
-            <h4>Carta De Amor</h4>
-            <p>
-              Una carta animada que se abre al hacer clic, revelando un mensaje
-              oculto en su interior.
-            </p>
-            <div class="tech-tags">
-              <span class="tag html">HTML</span>
-              <span class="tag css">CSS</span>
-              <span class="tag js">JS</span>
-              <span class="tag Dedicatorias">Dedicatorias</span>
-              <i class="bx bxs-heart heart1"></i>
-              <i class="bx bxs-heart heart2"></i>
-            </div>
-          </a>
-
-          <!---->
-          <!-- Proyecto 2 -->
-          <!---->
-          <a
-            href="Proyectos♥/coleción-de-imágenes/index.html"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="box"
-          >
-            <img src="./imagenes/imagen-2.png" alt="Proyecto 2" />
-            <h4>Mi Corazón Por Ti</h4>
-            <p>
-              Un corazón late en pantalla y, al hacer clic en él, revela cuántos
-              días ha latido mi corazón por ti. Un detalle simple, visual y
-              lleno de cariño.
-            </p>
-            <div class="tech-tags">
-              <span class="tag html">HTML</span>
-              <span class="tag css">CSS</span>
-              <span class="tag js">JS</span>
-              <span class="tag Dedicatorias">Dedicatorias</span>
-              <i class="bx bxs-heart heart1"></i>
-              <i class="bx bxs-heart heart2"></i>
-            </div>
-          </a>
-
-          <!---->
-          <!-- Proyecto 3 -->
-          <!---->
-          <a
-            href="Proyectos♥/collage-de-imágenes/index.html"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="box"
-          >
-            <img src="./imagenes/imagen-3.png" alt="Proyecto 3" />
-            <h4>Feliz Cumpleaños</h4>
-            <p>
-              Una escena interactiva de cumpleaños con torta animada, regalo y
-              portarretrato, acompañada de confeti, música y efectos visuales
-              festivos.
-            </p>
-            <div class="tech-tags">
-              <span class="tag html">HTML</span>
-              <span class="tag css">CSS</span>
-              <span class="tag js">JS</span>
-              <span class="tag Dedicatorias">Dedicatorias</span>
-              <i class="bx bxs-heart heart1"></i>
-              <i class="bx bxs-heart heart2"></i>
-            </div>
-          </a>
-
-          <!---->
-          <!-- Proyecto 4 -->
-          <!---->
-          <a
-            href="Proyectos♥/corazón-negro/index.html"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="box"
-          >
-            <img src="./imagenes/imagen-4.png" alt="Proyecto 4" />
-            <h4>¿Quieres Ser Mi Amorcito?</h4>
-            <p>
-              Un boton travieso que siempre huye cuando intentas decir “No”,
-              hasta que solo queda una opción: aceptar el “Sí”. Al hacerlo,
-              aparece un mensaje romántico.
-            </p>
-            <div class="tech-tags">
-              <span class="tag html">HTML</span>
-              <span class="tag css">CSS</span>
-              <span class="tag js">JS</span>
-              <span class="tag Dedicatorias">Dedicatorias</span>
-              <i class="bx bxs-heart heart1"></i>
-              <i class="bx bxs-heart heart2"></i>
-            </div>
-          </a>
-
-          <!---->
-          <!-- Proyecto 5 -->
-          <!---->
-          <a
-            href="Proyectos♥/galaxy-de-fotos/index.html"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="box"
-          >
-            <img src="imagenes/imagen-5.png" alt="Proyecto 5" />
-            <h4>Fuegos Artificiales</h4>
-            <p>
-              Un espectáculo visual de fuegos artificiales animados en tiempo
-              real usando JavaScript y Canvas, con explosiones interactivas y
-              efectos brillantes.
-            </p>
-            <div class="tech-tags">
-              <span class="tag js">JS</span>
-              <span class="tag Visual-Effects">Visual Effects</span>
-              <i class="bx bxs-star star1"></i>
-              <i class="bx bxs-star star2"></i>
-            </div>
-          </a>
-
-          <!---->
-          <!-- Proyecto 6 -->
-          <!---->
-          <a
-            href="Proyectos♥/ramo-de-tulipanes-rosados/index.html"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="box"
-          >
-            <img src="./imagenes/imagen-6.png" alt="Proyecto 6" />
-            <h4>Tic Tac Toe</h4>
-            <p>
-              El clásico “3 en raya”, ahora con diseño moderno, animaciones y
-              dos modos de juego: entre jugadores o contra el bot.
-            </p>
-            <div class="tech-tags">
-              <span class="tag html">HTML</span>
-              <span class="tag css">CSS</span>
-              <span class="tag js">JS</span>
-              <span class="tag Videojuegos">Videojuegos</span>
-              <i class="bx bxs-invader invader1"></i>
-              <i class="bx bxs-invader invader2"></i>
-            </div>
-          </a>
-
-          <!---->
-          <!-- Proyecto 7 -->
-          <!---->
-          
+    <div class="proyectos-container">
+      <!--proyecto 1-->
+      <a class="grid-item tall " href="./Proyectos♥/carrusel-de-imágenes/index.html"  style="background-image: url('./tools/assets/imagen-1.png')">
+        <div class="proyectos">
+          <img src="" alt="proyecto 1">
         </div>
-      </div>
-    </section>
+        <div>
+          <h1>marco</h1>
+          <p>descripción</p>
+        </div>
+      </a>
+      <!--proyecto 2 -->
+      <a class="grid-item wide" href="./Proyectos♥/coleción-de-imágenes/index.html" style="background-image: url('./tools/assets/imagen-2.png');">
+        <div>
+          <img src="" alt="proyecto 2">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+      <!--proyecto 3-->
+      <a class="grid-item tall" href="./Proyectos♥/collage-de-imágenes/index.html" style="background-image: url('./tools/assets/imagen-3.png');">
+        <div>
+          <img src="" alt="proyecto 3">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+      <!--proyecto 4-->
+      <a class="grid-item" href="./Proyectos♥/corazón-negro/index.html" style="background-image: url('./tools/assets/imagen-4.png');">
+        <div>
+          <img src="" alt="proyecto 4">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+      <!--proyecto 5-->
+      <a class="grid-item tall wide" href="./Proyectos♥/galaxy-de-fotos/index.html" style="background-image: url('./tools/assets/imagen-5.png');">
+        <div>
+          <img src="" alt="proyecto 5">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+      <!--proyecto 6-->
+      <a class="grid-item" href="./Proyectos♥/ramo-de-tulipanes-rosados/" style="background-image: url('./tools/assets/imagen-6.png');">
+        <div>
+          <img src="" alt="proyecto 6">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+      <!--proyecto 7-->
+      <a class="grid-item" href="" style="background-image: url('https://picsum.photos/id/881/900/900.jpg');">
+        <div>
+          <img src="" alt="proyecto 7">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+    </div>
   </body>
 </html>
