--- a/Proyectos♥/ramo-de-tulipanes-rosados/tulipanes/index.html
+++ b/Proyectos♥/ramo-de-tulipanes-rosados/tulipanes/index.html
@@ -928,7 +928,7 @@
   <audio src="https://github.com/Baque2005/ReparacionSysteclinx/raw/refs/heads/main/Eldar%20Kedem%20-%20%20Walking%20Around.mp3" autoplay></audio>
   <div class="night"></div>
   
-  <div class="special-text">“Para ti, mi hermosa: Tan linda, tan preciosa y tan bella como un tulipán 💚💙💓🌷”</div>
+  <div class="special-text">“Para ti, hermosa💚💙💓🌷”</div>
   
 
   <div class="shooting-stars">
