--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </a>
       <!--proyecto 2 -->
-      <a class="grid-item wide" href="./Proyectos♥/coleción-de-imágenes/index.html" style="background-image: url('./tools/assets/imagen-2.png');">
+      <a class="grid-item" href="./Proyectos♥/coleción-de-imágenes/index.html" style="background-image: url('./tools/assets/imagen-2.png');">
         <div>
           <img src="" alt="proyecto 2">
         </div>
@@ -29,7 +29,7 @@
         </div>
       </a>
       <!--proyecto 3-->
-      <a class="grid-item tall" href="./Proyectos♥/collage-de-imágenes/index.html" style="background-image: url('./tools/assets/imagen-3.png');">
+      <a class="grid-item wide" href="./Proyectos♥/collage-de-imágenes/index.html" style="background-image: url('./tools/assets/imagen-3.png');">
         <div>
           <img src="" alt="proyecto 3">
         </div>
@@ -59,7 +59,7 @@
         </div>
       </a>
       <!--proyecto 6-->
-      <a class="grid-item" href="./Proyectos♥/ramo-de-tulipanes-rosados/" style="background-image: url('./tools/assets/imagen-6.png');">
+      <a class="grid-item tall" href="./Proyectos♥/ramo-de-tulipanes-rosados/" style="background-image: url('./tools/assets/imagen-6.png');">
         <div>
           <img src="" alt="proyecto 6">
         </div>
@@ -72,6 +72,26 @@
       <a class="grid-item" href="" style="background-image: url('https://picsum.photos/id/881/900/900.jpg');">
         <div>
           <img src="" alt="proyecto 7">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+      <!--proyecto 8-->
+      <a class="grid-item" href="" style="background-image: url(./tools/assets/imagen-7.png);">
+        <div>
+          <img src="" alt="proyecto 8">
+        </div>
+        <div>
+          <h1></h1>
+          <p></p>
+        </div>
+      </a>
+      <!--proyecto 9-->
+      <a class="grid-item" href="" style="background-image: url(./tools/assets/imagen-8.png);">
+        <div>
+          <img src="" alt="proyecto 9">
         </div>
         <div>
           <h1></h1>
