--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!--proyecto 9-->
       <a class="grid-item" href="" style="background-image: url(./tools/assets/imagen-8.png);">
         <div>
-          <img src="" alt="proyecto 9">
+          <img src="./Proyectos♥/Galaxia-del-Amor/index.html" alt="proyecto 9">
         </div>
         <div>
           <h1></h1>
