--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         </div>
       </a>
       <!--proyecto 9-->
-      <a class="grid-item" href="" style="background-image: url(./tools/assets/imagen-8.png);">
+      <a class="grid-item" href="./Proyectos♥/Galaxia-del-Amor/index.html" style="background-image: url(./tools/assets/imagen-8.png);">
         <div>
-          <img src="./Proyectos♥/Galaxia-del-Amor/index.html" alt="proyecto 9">
+          <img src="" alt="proyecto 9">
         </div>
         <div>
           <h1></h1>
